# device-sdk-samples

./: CHANGELOG.md  README.md  build_all.ps1
cpp/CaptureSampleCLI/: CMakeLists.txt  CaptureSampleCLI.cpp  CaptureSampleCLI_NoCallback.cpp
cpp/CaptureSampleOpenCv/: CMakeLists.txt  CaptureSampleOpenCv.cpp  CaptureSampleOpenCvPP.cpp
cpp/MFC/: id3DevicesSamples.sln
cpp/MFC/id3DevicesSamples/: ChildView.cpp  ChildView.h  MainFrm.cpp  MainFrm.h  Resource.h  id3DevicesSamples.aps  id3DevicesSamples.cpp  id3DevicesSamples.h  id3DevicesSamples.rc  id3DevicesSamples.vcxproj
cpp/MFC/id3DevicesSamples/res/: id3DevicesSamples.rc2
dotnet/: id3.Devices.Samples.sln
dotnet/id3.Devices.Samples/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  id3.Devices.Samples.csproj
dotnet/id3.Devices.Samples/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
python/: sample_capture.py
